<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelsMap"
    android:background="@drawable/map">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textbg"
        android:fontFamily="@font/kavoon"
        android:text="@string/lvl_select"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="197dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="@font/kavoon"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="34sp"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="@font/kavoon"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="34sp"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="243dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="@font/kavoon"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="34sp"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:fontFamily="@font/kavoon"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:cornerRadius="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>